--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
     
     // CERTIFICATIONS
     htmlBuilder.append("certificationsContainer", [
-        { certification:"Java SE 8 Programmer I", date:"Sep 2016 – Present License 1Z0-808", authority:"Oracle", imagePath:"https://media.licdn.com/dms/image/C4D0BAQG_Cl_OtKtHaQ/company-logo_400_400/0?e=2131920000&v=beta&t=g52tPuhleiXByWasSIR9vjP6lwgyR3-X8CSfOA3OYzQ", template:"certifications_template" },
-        { certification:"CompTIA Project+", date:"May 2016 – Present", authority:"CompTIA", imagePath:"/sites/webprogrammerguy/images/project.jpg", template:"certifications_template" },
-        { certification:"CompTIA Security+ ce", date:"Jun 2016 – Jun 2019", authority:"CompTIA", imagePath:"/sites/webprogrammerguy/images/security.jpg", template:"certifications_template" },
-        { certification:"CompTIA A+ ce", date:"Apr 2015 – Sep 2018", authority:"CompTIA", imagePath:"/sites/webprogrammerguy/images/a.jpg", template:"certifications_template" },
-        { certification:"CompTIA Network+ ce", date:"Sep 2015 – Sep 2018", authority:"CompTIA", imagePath:"/sites/webprogrammerguy/images/network.png", template:"certifications_template" }
+        { certification:"Java SE 8 Programmer I", date:"Sep 2016 – Present License 1Z0-808", authority:"Oracle", imagePath:"/images/0.png", template:"certifications_template" },
+        { certification:"CompTIA Project+", date:"May 2016 – Present", authority:"CompTIA", imagePath:"/images/project.jpg", template:"certifications_template" },
+        { certification:"CompTIA Security+ ce", date:"Jun 2016 – Jun 2019", authority:"CompTIA", imagePath:"/images/security.jpg", template:"certifications_template" },
+        { certification:"CompTIA A+ ce", date:"Apr 2015 – Sep 2018", authority:"CompTIA", imagePath:"/images/a.jpg", template:"certifications_template" },
+        { certification:"CompTIA Network+ ce", date:"Sep 2015 – Sep 2018", authority:"CompTIA", imagePath:"/images/network.png", template:"certifications_template" }
     ]);
 
     // PROJECTS
