--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -123,7 +123,7 @@
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="js/htmlBuilder.js"></script>
+<script type="text/javascript" src="/js/htmlbuilder.js"></script>
 
 <template id="menu_template" style="display:none">
     <li><a href="{{href}}">{{name}}</a></li>
@@ -259,6 +259,6 @@
     });
 </script>
 
-<script type="text/javascript" src="js/scripts.min.js"></script>
+<script type="text/javascript" src="/js/scripts.min.js"></script>
 
 </html>
