--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     ]);
 
     // PROJECTS
-    $.getJSON("/js/ProjectHistory.js", 
+    $.getJSON("/js/ProjectHistory.json", 
     function(data) {
         //var projectData = [];
         //for (var i = 0; i < data.feed.entry.length; i++) {
