--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     ]);
 
     // PROJECTS
-    $.getJSON("/js/ProjectHistory.json", 
-    function(data) {
+    //$.getJSON("/js/ProjectHistory.json", 
+    //function(data) {
         //var projectData = [];
         //for (var i = 0; i < data.feed.entry.length; i++) {
         //    var csv = data.feed.entry[i].content.$t.split(",");
@@ -257,9 +257,15 @@
         //        description: (csv.length > 1) ? csv[1].substring(8, csv[1].length) : ""
         //    });
         //}
-        console.log(data);
-        htmlBuilder.append("projectsContainer", data.data);
-    });
+        //console.log(data);
+        //htmlBuilder.append("projectsContainer", data.data);
+    //});
+</script>
+
+<script type="text/javascript" src="/js/ProjectHistory.json"></script>
+<script type=text/javascript">
+        console.log(projectHistory.data);
+        htmlBuilder.append("projectsContainer", projectHistory.data);		    
 </script>
 
 <script type="text/javascript" src="/js/scripts.min.js"></script>
