--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
     //});
 </script>
 
-<script type="text/javascript" src="/js/ProjectHistory.json"></script>
+<script type="text/javascript" src="../js/ProjectHistory.json"></script>
 <script type=text/javascript">
         console.log(projectHistory.data);
         htmlBuilder.append("projectsContainer", projectHistory.data);		    
 </script>
 
-<script type="text/javascript" src="/js/scripts.min.js"></script>
+<script type="text/javascript" src="../js/scripts.min.js"></script>
 
 </html>
