--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
 <script type="text/javascript" src="../js/ProjectHistory.json"></script>
 <script type=text/javascript">
-        console.log(projectHistory.data);
-        htmlBuilder.append("projectsContainer", projectHistory.data);		    
+        console.log(projectHistory);
+        htmlBuilder.append("projectsContainer", projectHistory);		    
 </script>
 
 <script type="text/javascript" src="../js/scripts.min.js"></script>
