--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
     //});
 </script>
 
+<script type=text/javascript">
+        projectHistory = null;		    
+</script>
 <script type="text/javascript" src="../js/ProjectHistory.json"></script>
 <script type=text/javascript">
         console.log(projectHistory);
