--- a/index.html
+++ b/index.html
@@ -246,30 +246,30 @@
 
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
-   {
-      "project":"Generated translations and missing translation documentation for 5.3 Release",
-      "date":"August 2021",
-      "description":"",
-      "template":"projects_template"
-   },
-   {
-      "project":"Updated OPEN LDAP to support IPv6 addressing",
-      "date":"August 2021",
-      "description":"",
-      "template":"projects_template"
-   },
-   {
-      "project":"Improvements to security on Single Sign On Cryptography",
-      "date":"August 2021",
-      "description":"",
-      "template":"projects_template"
-   },
-   {
-      "project":"Testing and bugfixes for 5.3 Release",
-      "date":"July 2021",
-      "description":"",
-      "template":"projects_template"
-   },
+   //{
+   //   "project":"Generated translations and missing translation documentation for 5.3 Release",
+   //   "date":"August 2021",
+   //   "description":"",
+   //   "template":"projects_template"
+   //},
+   //{
+   //   "project":"Updated OPEN LDAP to support IPv6 addressing",
+   //   "date":"August 2021",
+   //   "description":"",
+   //   "template":"projects_template"
+   //},
+   //{
+   //   "project":"Improvements to security on Single Sign On Cryptography",
+   //   "date":"August 2021",
+   //   "description":"",
+   //   "template":"projects_template"
+   //},
+   //{
+   //   "project":"Testing and bugfixes for 5.3 Release",
+   //   "date":"July 2021",
+   //   "description":"",
+   //   "template":"projects_template"
+   //},
    {
       "project":"Support X-Forwarded-For Header for IP Restriction Whitelist",
       "date":"June 2021",
