--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 </template>
 
-<template id="projects_template" style="display:none">
+<template id="projects_template">
     <div class="projects_item" title="{{description}}">
         <h3 class="projects_title">{{project}}</h3>
         <div class="projects_date">{{date}}</div>
