--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
-   {
+    {
       "project":"Generated translations and missing translation documentation for 5.3 Release",
       "date":"August 2021",
       "description":"",
@@ -341,7 +341,10 @@
       "date":"April 2021",
       "description":"",
       "template":"projects_template"
-   },
+   }
+   ]);
+    htmlBuilder.append("projectsContainer", [
+   
    {
       "project":"Updates to API Documentation for Tags",
       "date":"April 2021",
@@ -1540,6 +1543,280 @@
    {
       "project":"Joplin Area Chamber of Commerce",
       "date":"May 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Clay County Chamber of Commerce",
+      "date":"April 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Fishers Chamber of Commerce",
+      "date":"April 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Irving - Las Colinas Chamber of Commerce",
+      "date":"April 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"California Redevelopment Association",
+      "date":"March 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Salt Lake Chamber of Commerce",
+      "date":"March 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"South Kingstown Chamber of Commerce",
+      "date":"February 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Temple Chamber of Commerce",
+      "date":"February 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Timber Bend Home Owners Association",
+      "date":"February 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"San Francisco Chamber of Commerce",
+      "date":"January 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"West Virginia Chamber of Commerce",
+      "date":"January 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Commerce Lexington Chamber of Commerce",
+      "date":"January 2011",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Holyoke Chamber of Commerce",
+      "date":"December 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Coronado Chamber of Commerce",
+      "date":"December 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Cool Springs Chamber of Commerce",
+      "date":"November 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Plainfield, IN Chamber of Commerce",
+      "date":"November 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Visit Clearwater Florida",
+      "date":"October 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Clearwater Florida Chamber of Commerce",
+      "date":"October 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Fredericksburg Chamber of Commerce",
+      "date":"September 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Noblesville Chamber of Commerce",
+      "date":"September 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"South Carolina Trucking Association",
+      "date":"August 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Brownsville Chamber of Commerce",
+      "date":"August 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Flagler Chamber of Commerce",
+      "date":"July 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Mayfield - Graves Chamber of Commerce",
+      "date":"July 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"DeKalb Chamber of Commerce",
+      "date":"June 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Glastonbury Chamber of Commerce",
+      "date":"June 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Redondo Beach Chamber of Commerce",
+      "date":"May 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Mitchell Chamber of Commerce",
+      "date":"May 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Superior-Douglas Chamber of Commerce",
+      "date":"April 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Oswego-Fulton Chamber of Commerce",
+      "date":"April 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Fayetteville, AR Chamber of Commerce",
+      "date":"March 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Nebraska City Chamber of Commerce",
+      "date":"February 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Kelowna, BC Chamber of Commerce",
+      "date":"January 2010",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Woodford County Chamber of Commerce",
+      "date":"December 2009",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Southern Chester County Chamber of Commerce",
+      "date":"November 2009",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Pittsburgh Airport Area Chamber of Commerce",
+      "date":"September 2009",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Adesa Auto Auctions",
+      "date":"June 2008",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"TGIC Lawn",
+      "date":"July 2007",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Unique Personalizations",
+      "date":"April 2007"
+   },
+   {
+      "project":"Web Programmer Guy",
+      "date":"April 2006",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Red Letter Days",
+      "date":"February 2006",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":".NET Developers Blog",
+      "date":"December 2005",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"FMyLife",
+      "date":"November 2005",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Sanctuary of the Arts",
+      "date":"August 2005",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Perks for Work",
+      "date":"June 2005",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"Blue Moon Gifts",
+      "date":"January 2005",
+      "description":"",
+      "template":"projects_template"
+   },
+   {
+      "project":"NETjunkE",
+      "date":"February 2003",
       "description":"",
       "template":"projects_template"
    }
