--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
     <div id="projects">
         <h2 class="heading">Projects</h2>
-	<div id="projectsContainer"></div>
+	<div id="projectsContainer1"></div>
+	<div id="projectsContainer2"></div>
     </div>
 
     <footer>
@@ -245,7 +246,7 @@
     ]);
 
     // PROJECTS
-    htmlBuilder.append("projectsContainer", [
+    htmlBuilder.append("projectsContainer1", [
     {
       "project":"Generated translations and missing translation documentation for 5.3 Release",
       "date":"August 2021",
@@ -343,7 +344,7 @@
       "template":"projects_template"
    }
    ]);
-    htmlBuilder.append("projectsContainer", [
+    htmlBuilder.append("projectsContainer2", [
    
    {
       "project":"Updates to API Documentation for Tags",
