--- a/index.html
+++ b/index.html
@@ -1777,7 +1777,9 @@
    },
    {
       "project":"Unique Personalizations",
-      "date":"April 2007"
+      "date":"April 2007",
+      "description":"",
+      "template":"projects_template"
    },
    {
       "project":"Web Programmer Guy",
