--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 
     <div id="projects">
         <h2 class="heading">Projects</h2>
-	<div id="projectsContainer1"></div>
-	<div id="projectsContainer2"></div>
+	<div id="projectsContainer"></div>
     </div>
 
     <footer>
@@ -246,7 +245,7 @@
     ]);
 
     // PROJECTS
-    htmlBuilder.append("projectsContainer1", [
+    htmlBuilder.append("projectsContainer", [
     {
       "project":"Generated translations and missing translation documentation for 5.3 Release",
       "date":"August 2021",
@@ -1171,16 +1170,7 @@
       "date":"July 2014",
       "description":"",
       "template":"projects_template"
-   }
-   ]);
-	
-	
-	
-// ---------------------------------------------------------------------------------------------------------------------------------------------------------
-	
-	
-	
-    htmlBuilder.append("projectsContainer2", [
+   },
    {
       "project":"WebLink CapWiz API Integration",
       "date":"May 2014",
