--- a/index.html
+++ b/index.html
@@ -286,6 +286,30 @@
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
     {
+      "project":"Client Service SignalR Client",
+      "date":"September 2021",
+      "description":"",
+      "template":"projects_template"
+    },
+    {
+      "project":"SmartRecord Website SignalR Hub",
+      "date":"September 2021",
+      "description":"",
+      "template":"projects_template"
+    },
+    {
+      "project":"Generated translations and missing translation documentation for 5.3 Release",
+      "date":"August 2021",
+      "description":"",
+      "template":"projects_template"
+    },
+    {
+      "project":"Updates to Install and Configuration, API, and Admin Interface Documentation Sets",
+      "date":"August 2021",
+      "description":"",
+      "template":"projects_template"
+    },
+    {
       "project":"Generated translations and missing translation documentation for 5.3 Release",
       "date":"August 2021",
       "description":"",
