--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         { name:"MVC", template:"skills_template" },
         { name:"MVVM", template:"skills_template" },
         { name:"ASP.NET", template:"skills_template" },
+	{ name:"ASP.NET SignalR", template:"skills_template" },
         { name:"Visual Studio", template:"skills_template" },
         { name:"Team Foundation Server", template:"skills_template" },
         { name:"visual Studio Online", template:"skills_template" },
