--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
     </div>
 </template>
 
+<template id="codeexamples_template">
+    <div class="codeexamples_item" title="{{description}}">
+        <h3 class="codeexamples_title">{{project}}</h3>
+        <div class="codeexamples_date">{{date}}</div>
+	<div class="codeexamples_link"><a href="{{link}}" target="_blank">link</a></div>
+    </div>
+</template>
+
 <template id="projects_template">
     <div class="projects_item" title="{{description}}">
         <h3 class="projects_title">{{project}}</h3>
@@ -255,31 +263,36 @@
     {
       "project":"LeetCode: Reverse Integer",
       "date":"September 2021",
-      "description":"<a href='https://leetcode.com/submissions/detail/558584596/' target='_blank'>link</a>",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/558584596/",	
       "template":"projects_template"
     },
     {
       "project":"LeetCode: Container With Most Water",
       "date":"September 2021",
-      "description":"<a href='https://leetcode.com/submissions/detail/560021324/' target='_blank'>link</a>",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/560021324/",
       "template":"projects_template"
     },
     {
       "project":"LeetCode: Median of Two Sorted Arrays",
       "date":"September 2021",
-      "description":"<a href='https://leetcode.com/submissions/detail/560293012/' target='_blank'>link</a>",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/560293012/",
       "template":"projects_template"
     },
     {
       "project":"LeetCode: Nth Tribonacci Number",
       "date":"September 2021",
-      "description":"<a href='https://leetcode.com/submissions/detail/560715641/' target='_blank'>link</a>",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/560715641/",
       "template":"projects_template"
     },
     {
       "project":"LeetCode: Remove Duplicates From Sorted Array",
       "date":"September 2021",
-      "description":"<a href='https://leetcode.com/submissions/detail/560715518/' target='_blank'>link</a>",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/560715518/",
       "template":"projects_template"
     }    
     ]);
