--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
 
 <template id="codeexamples_template">
     <div class="codeexamples_item" title="{{description}}">
-        <h3 class="codeexamples_title">{{project}}</h3>
+        <h3 class="codeexamples_title">LeetCode: <a href="{{link}}" target="_blank">{{project}}</a></h3>
         <div class="codeexamples_date">{{date}}</div>
-	<div class="codeexamples_link"><a href="{{link}}" target="_blank">link</a></div>
     </div>
 </template>
 
@@ -261,35 +260,35 @@
     // CODE EXAMPLES
     htmlBuilder.append("codeExamplesContainer", [
     {
-      "project":"LeetCode: Reverse Integer",
+      "project":"Reverse Integer",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/558584596/",	
       "template":"projects_template"
     },
     {
-      "project":"LeetCode: Container With Most Water",
+      "project":"Container With Most Water",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560021324/",
       "template":"projects_template"
     },
     {
-      "project":"LeetCode: Median of Two Sorted Arrays",
+      "project":"Median of Two Sorted Arrays",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560293012/",
       "template":"projects_template"
     },
     {
-      "project":"LeetCode: Nth Tribonacci Number",
+      "project":"Nth Tribonacci Number",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560715641/",
       "template":"projects_template"
     },
     {
-      "project":"LeetCode: Remove Duplicates From Sorted Array",
+      "project":"Remove Duplicates From Sorted Array",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560715518/",
