--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       "template":"projects_template"
    },
    {
-      "project":"Perfornace Updates to Combined Interactions View",
+      "project":"Performance Updates to Combined Interactions View",
       "date":"April 2021",
       "description":"",
       "template":"projects_template"
