--- a/index.html
+++ b/index.html
@@ -264,35 +264,35 @@
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/558584596/",	
-      "template":"projects_template"
+      "template":"codeexamples_template"
     },
     {
       "project":"Container With Most Water",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560021324/",
-      "template":"projects_template"
+      "template":"codeexamples_template"
     },
     {
       "project":"Median of Two Sorted Arrays",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560293012/",
-      "template":"projects_template"
+      "template":"codeexamples_template"
     },
     {
       "project":"Nth Tribonacci Number",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560715641/",
-      "template":"projects_template"
+      "template":"codeexamples_template"
     },
     {
       "project":"Remove Duplicates From Sorted Array",
       "date":"September 2021",
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560715518/",
-      "template":"projects_template"
+      "template":"codeexamples_template"
     }    
     ]);
 
