--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div style="padding: 2px;border: 1px #999999 solid;float: left;margin: 2px 25px 25px 0;">
 			<img height="300" style="border: 1px #999999 solid;" src="images/jason.jpg">
 		</div>
-                <p>I have 16 years experience writing console and website applications, more than 350 college credits in Software Engineering and Information Technology, am fluent in over 12 programming languages, and have been responsible for developing software products connecting upwards of 200 million end users.  My experience building applications varies widely in purpose and size including mobile responsive websites, mobile applications, web services, databases, and custom tools for automated testing. I am comfortable developing on any application layer, user interface, Service, business logic, and Database. I have excellent object-oriented abstraction and design abilities, having designed and developed powerful software frameworks using Javascript, MVC, MVVM, .NET (C# and VB), .NET Core, and Java. I am able to complete Tasks in an accurate and timely manner whether they require extensive upfront planning, mockups, and process flows, or can be more easily flushed out by writing them directly.  I make efforts to reach out to Product Owners for quick resolution whenever I have a question about Feature requirements.  I do my best to demonstrate completed Features to Product Owners before resolving Stories.  I prefer my code is peer reviewed before making a commit and often initiate the process.  I happily volunteer for projects which require research of new technologies.  I initiate work on backlogged items whenever Tasks are complete.  I have a highly tenacious personality, good work-life balance, a strong work ethic, and when asked if I can build something, my answer is always, "Of course I can".</p>
+                <p>I have 19 years experience writing responsive website applications, console applications, services, Java applications, mobile applications, and Windows applications.  I have earned more than 350 college credits in Software Engineering and Information Technology  I am fluent in over a dozen programming languages.  I have been responsible for developing software products connecting upwards of 200 million end users.  I am comfortable developing on any application layer, user interface, Service, api, or database.  I have designed and developed powerful software frameworks using Javascript, MVC, MVVM, .NET (C# and VB), .NET Core, Java, Xaml, and more.  I have a highly tenacious personality, good work-life balance, a strong work ethic, and when asked if I can build something, my answer is always, "Of course I can".</p>
                 <br/>
 		<p>Visit my <a href="https://www.linkedin.com/pub/jason-williams/22/194/280" target="_blank">LinkedIn</a> profile for more information.</p>
             </div>
@@ -293,19 +293,26 @@
       "description":"",
       "link": "https://leetcode.com/submissions/detail/560715518/",
       "template":"codeexamples_template"
+    },
+    {
+      "project":"Two Sum",
+      "date":"February 2022",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/646891373/",
+      "template":"codeexamples_template"
     }    
     ]);
 
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
     {
-      "project":"Client Service SignalR Client",
+      "project":"SignalR Client Desktop Notifier",
       "date":"September 2021",
       "description":"",
       "template":"projects_template"
     },
     {
-      "project":"SmartRecord Website SignalR Hub",
+      "project":"SmartRecord Web Services SignalR Hub and API",
       "date":"September 2021",
       "description":"",
       "template":"projects_template"
