--- a/index.html
+++ b/index.html
@@ -260,6 +260,139 @@
     // CODE EXAMPLES
     htmlBuilder.append("codeExamplesContainer", [
     {
+      "project":"Support for Elasticsearch v7.10.2 and v8.3.1",
+      "date":"July 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Elasticsearch support for Amazon Transcribe Transcriptions",
+      "date":"July 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Amazon Transcribe Transcriptions",
+      "date":"June 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Installer and Activation Validation Tool",
+      "date":"June 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Security Vulnerablilty Patches",
+      "date":"May 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Crypto SSO via SmartRecord Web Services API",
+      "date":"May 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Set User's Preferred Time Zone from Admin Portal",
+      "date":"April 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Email a Link to a Recorded Call Detail",
+      "date":"March 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Displaying Release Notes on First Sign-On",
+      "date":"March 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"SmartRecord Web Services API Documenation Updates",
+      "date":"February 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"jQuery Security Updates",
+      "date":"February 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Telerik Report for Last Week's Trend",
+      "date":"January 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Localization for Desktop Notifier",
+      "date":"January 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Local Settings for Desktop Notifier",
+      "date":"December 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Windows Toast Notifications for Desktop Notifier",
+      "date":"December 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Windows Taskbar Icon and Menu for Desktop Notifier",
+      "date":"December 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Set Categories and Tags from Desktop Notifier",
+      "date":"December 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"Testing Resource Generator Support for Slovak and Czech",
+      "date":"November 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
+      "project":"SmartRecord Web Services API Method for GetNotificationDetail",
+      "date":"November 2021",
+      "description":"",
+      "link": "",	
+      "template":"codeexamples_template"
+    },
+    {
       "project":"Reverse Integer",
       "date":"September 2021",
       "description":"",
