--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         { name:"XML", template:"skills_template" },
         { name:"XSLT", template:"skills_template" },
         { name:"HTML 5", template:"skills_template" },
+	{ name:"SignalR", template:"skills_template" }, 
         { name:"Bootstrap", template:"skills_template" },
         { name:"Font Awesome", template:"skills_template" },
         { name:"Balsamiq", template:"skills_template" },
@@ -229,7 +230,8 @@
         { name:"Eclipse", template:"skills_template" },
         { name:"IntelliJ IDEA Community", template:"skills_template" },
         { name:"Android Studio", template:"skills_template" },
-        { name:"Android SDK", template:"skills_template" }    
+        { name:"Android SDK", template:"skills_template" },
+        { name:"Elasticsearch", template:"skills_template" }    
     ]);
     
     // EDUCATION
