--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     <div id="experience" class="background-alt" style="border-bottom: 1px solid #dcd9d9;">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline"></div>
+	<div>
+            <br/>
+	    <p>Visit my <a href="https://www.linkedin.com/pub/jason-williams/22/194/280" target="_blank">LinkedIn</a> profile for additional experience.</p>
+	</div>
     </div>
     
     <div id="certifications" style="text-align:center;border-bottom: 1px solid #dcd9d9;">
