--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 	
     <div id="codeexamples">
-        <h2 class="heading">Code Examples</h2>
+        <h2 class="heading">Coding Challenges</h2>
 	<div id="codeExamplesContainer"></div>
     </div>
 
