--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="lead-content">
             <h1>Jason Williams</h1>
             <h2>Senior Software Engineer</h2>
-            <a href="https://www.linkedin.com/pub/jason-williams/22/194/280" class="btn-rounded-white" target="_blank">Download Resume</a>
+            <a href="https://www.linkedin.com/pub/jason-williams/22/194/280" class="btn-rounded-white" target="_blank">LinkedIn Profile</a>
         </div>
 
         <div id="lead-overlay"></div>
@@ -56,7 +56,7 @@
 		<div style="padding: 2px;border: 1px #999999 solid;float: left;margin: 2px 25px 25px 0;">
 			<img height="300" style="border: 1px #999999 solid;" src="images/jason.jpg">
 		</div>
-                <p>I have 19 years experience writing responsive website applications, console applications, services, Java applications, mobile applications, and Windows applications.  I have earned more than 350 college credits in Software Engineering and Information Technology.  I am fluent in over a dozen programming languages.  I have been responsible for developing software products connecting upwards of 200 million end users.  I am comfortable developing on any application layer, user interface, Service, api, or database.  I have designed and developed powerful software frameworks using Javascript, MVC, MVVM, .NET (C# and VB), .NET Core, Java, Xaml, and more.  I have a highly tenacious personality, good work-life balance, a strong work ethic, and when asked if I can build something, my answer is always, "Of course I can".</p>
+                <p>I have 19 years experience writing responsive website, console, service, mobile, Windows, and container applications.  I completed more than 350 college credits in Software Engineering and Information Technology.  I am fluent in over a dozen programming languages.  I am responsible for developing software products connecting upwards of 200 million end users.  I am comfortable developing on any application layer, user interface, service, api, or database.  I design and develop powerful software frameworks using Javascript, MVC, MVVM, .NET (C# and VB), .NET Core, Java, Xaml, and more.  I have a highly tenacious personality, good work-life balance, a strong work ethic, and when asked if I can build something, my answer is always, "Of course I can."</p>
                 <br/>
 		<p>Visit my <a href="https://www.linkedin.com/pub/jason-williams/22/194/280" target="_blank">LinkedIn</a> profile for more information.</p>
             </div>
@@ -202,11 +202,14 @@
         { name:"JavaScript", template:"skills_template" },
 	{ name:"VB", template:"skills_template" },
         { name:".NET", template:"skills_template" },
-        { name:".NET CORE", template:"skills_template" },
-        { name:"Javascript", template:"skills_template" },
+        { name:".NET CORE (netcore)", template:"skills_template" },
+	{ name:"Docker", template:"skills_template" },
+	{ name:"Rancher", template:"skills_template" },
+	{ name:"Docker", template:"skills_template" },
+        { name:"RabbitMQ", template:"skills_template" },
         { name:"jQuery", template:"skills_template" },
         { name:"Kendo UI", template:"skills_template" },
-        { name:"AngularJs", template:"skills_template" },
+        { name:"Angular", template:"skills_template" },
         { name:"CSS", template:"skills_template" },
         { name:"LESS", template:"skills_template" },
         { name:"Python", template:"skills_template" },
