--- a/index.html
+++ b/index.html
@@ -309,11 +309,36 @@
       "description":"",
       "link": "https://leetcode.com/submissions/detail/646891373/",
       "template":"codeexamples_template"
-    }    
+    },
+    {
+      "project":"Palindrome Number",
+      "date":"July 2022",
+      "description":"",
+      "link": "https://leetcode.com/submissions/detail/757376595/",
+      "template":"codeexamples_template"
+    }         
     ]);
 
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
+    {
+      "project":"Netcore Event Manager Container using RabbitMQ",
+      "date":"July 2021",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Netcore WebApi Rancher Container",
+      "date":"July 2021",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Netcore WebApi Docker Container",
+      "date":"July 2021",
+      "description":"",	
+      "template":"projects_template"
+    },
     {
       "project":"Support for Elasticsearch v7.10.2 and v8.3.1",
       "date":"July 2021",
