--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
         { name:"Visual Studio", template:"skills_template" },
         { name:"Team Foundation Server", template:"skills_template" },
         { name:"visual Studio Online", template:"skills_template" },
+	{ name:"JIRA", template:"skills_template" },
+	{ name:"Confluence", template:"skills_template" },
         { name:"WinForms", template:"skills_template" },
         { name:"SQL Server", template:"skills_template" },
         { name:"JSON", template:"skills_template" },
