--- a/index.html
+++ b/index.html
@@ -324,98 +324,152 @@
     // PROJECTS
     htmlBuilder.append("projectsContainer", [
     {
+      "project":"Mockups for Admin Portal Rewrite from WinForms to Razor/Javascript",
+      "date":"October 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Major Update of All Projects from .NET4 to .NET6",
+      "date":"October 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Database Service Test Tool Support for TimeZone",
+      "date":"September 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Splash Page Version Notes",
+      "date":"September 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Web Services API Documentation Updates",
+      "date":"September 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Desktop Notifier Documentation",
+      "date":"September 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"German and French Resource String Translations for 5.4",
+      "date":"August 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"TimeZones Continuous Integration Test",
+      "date":"August 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
+      "project":"Macro Search Validation",
+      "date":"August 2022",
+      "description":"",	
+      "template":"projects_template"
+    },
+    {
       "project":"Netcore Event Manager Container using RabbitMQ",
-      "date":"July 2021",
+      "date":"July 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Netcore WebApi Rancher Container",
-      "date":"July 2021",
+      "date":"July 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Netcore WebApi Docker Container",
-      "date":"July 2021",
+      "date":"July 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Support for Elasticsearch v7.10.2 and v8.3.1",
-      "date":"July 2021",
+      "date":"July 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Elasticsearch support for Amazon Transcribe Transcriptions",
-      "date":"July 2021",
+      "date":"July 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Amazon Transcribe Transcriptions",
-      "date":"June 2021",
+      "date":"June 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Installer and Activation Validation Tool",
-      "date":"June 2021",
+      "date":"June 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Security Vulnerablilty Patches",
-      "date":"May 2021",
+      "date":"May 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Crypto SSO via SmartRecord Web Services API",
-      "date":"May 2021",
+      "date":"May 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Set User's Preferred Time Zone from Admin Portal",
-      "date":"April 2021",
+      "date":"April 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Email a Link to a Recorded Call Detail",
-      "date":"March 2021",
+      "date":"March 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Displaying Release Notes on First Sign-On",
-      "date":"March 2021",
+      "date":"March 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"SmartRecord Web Services API Documenation Updates",
-      "date":"February 2021",
+      "date":"February 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"jQuery Security Updates",
-      "date":"February 2021",
+      "date":"February 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Telerik Report for Last Week's Trend",
-      "date":"January 2021",
+      "date":"January 2022",
       "description":"",	
       "template":"projects_template"
     },
     {
       "project":"Localization for Desktop Notifier",
-      "date":"January 2021",
+      "date":"January 2022",
       "description":"",	
       "template":"projects_template"
     },
